samples/_failures_safe/1761560514_f5e368_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e03095da.c: In function ‘main’:
./samples/SAFE/__tmp_e03095da.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_e03095da.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e03095da.c:152:17: error: expected declaration or statement at end of input
